--- a/Estilos.css
+++ b/Estilos.css
@@ -6,7 +6,7 @@
 
 header{
     width: 100%;
-    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+    background-image: linear-gradient(-225deg, #FFFEFF 0%, #D7FFFE 100%);
     height: 70px;
 }
 
@@ -26,18 +26,16 @@ header{
 
 .logo img{
     height: 50px;
-    border-radius: 20px;
-    
-
+    border-radius: 20px;  
 }
 
 .logo p{
     display: inline;
     font-size: 18px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: sans-serif;
     color: gray;
     margin-left: 5px;
-    font-weight: bold;
+    
 }
 
 .logo img:hover{
@@ -62,11 +60,32 @@ nav{
     text-decoration: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-left:15px;
+    transition: all 400ms ease;
 }
 
 .ancho ul li a:hover{
-    text-transform: uppercase;
     text-decoration: underline;
     cursor: pointer;
+    background: azure;
+}
+.contenedor{
+    position: relative;
 }
 
+.contenedor div{
+    position: absolute;
+    line-height: 1.8;
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.90);
+    padding: 30px;
+    padding-bottom: 40px;
+}
+
+#radio1:checked ~ .tab1,
+#radio1:checked ~ .tab2,
+#radio1:checked ~ .tab3,{
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+}
