--- a/Estilos.css
+++ b/Estilos.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Josefin Sans', sans-serif;
+
+
+}
+
 header{
     width: 100%;
     background-image: linear-gradient(-225deg, #FFFEFF 0%, #D7FFFE 100%);
@@ -33,7 +39,7 @@ header{
 .logo p{
     display: inline;
     font-size: 18px;
-    font-family: sans-serif;
+    
     color: gray;
     margin-left: 5px;
     
@@ -59,7 +65,7 @@ nav{
     color: gray;
     font-size: 18px;
     text-decoration: none;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
     padding-left:7px;
     padding-right: 8px;
     transition: all 400ms ease;
