--- a/Estilos.css
+++ b/Estilos.css
@@ -119,21 +119,31 @@ nav ul li a .tercero{background: #519795;}
     margin: 1em 6.4em;
     height: 280px;
     border-radius: 1em;
-    background: black;
     overflow: hidden;
     box-shadow: 0 5px 10px 0;
 }
 
-.imagen1{background: url("img/H1.jpg")no-repeat center center/cover;}
-.imagen2{background: url("img/H2.jpg")no-repeat center center/cover;}
-.imagen3{background: url("img/H3.jpg")no-repeat center center/cover;}
-.imagen4{background: url("img/Ej4.jpg")no-repeat center center/cover;}
+.imagen1{background: url("img/H1.jpg")no-repeat center center/cover; width: 100%; height: 100%;} 
+.imagen2{background: url("img/H2.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
+.imagen3{background: url("img/H3.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
+.imagen4{background: url("img/Ej4.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
 
-.imagenp{
-    position: relative;
+.barra-proy div section div  a{ text-decoration: none;}
+.barra-proy div section div  a:hover .nombrep{text-decoration: underline;}
+
+.imagenp {
+    display: flex;
+    width: 48%;
+    float: right;
+    height: 280px;
+}
+
+.imagenp img{
+    margin-top: 25px;
+    margin-left: 45px;
+    width: 300px;
+    height: 200px;
     border-radius: 1em;
-    width: 150px;
-    height: 100px;
 }
 
 .nombrep{
