--- a/Estilos.css
+++ b/Estilos.css
@@ -16,10 +16,11 @@ header{
     width: 84%;
     height: 55px;
     margin: auto;
+    padding-bottom: 3%;
 
 }
 
-.ancho{
+.ancho{ 
     width: 100%;
     height: 55px;
     margin: auto;
@@ -105,44 +106,48 @@ nav ul li a .tercero{background: #519795;}
 /*Contenido barra navegacion proyectos y etiquetas*/
 
 .contenido{
-    width: 96%;
-    height: 525px;
-    margin: 0.5em auto;
+    
+    width: 90%;
+    height: 50%;
+    margin: .5% auto;
     border-radius: 1em;
-    margin-bottom: 3.5em;
+    margin-bottom: 1em;
+    padding-top: 3%;
+    padding-bottom: 40%;
 }
 
 /*Menu desplazable de proyectos*/
 .barra-proy{
     position: absolute;
-    width: 80%;
-    margin: 1em 6.4em;
-    height: 280px;
+    width: 86%;
+    margin: -2% 2.2%;
+    height: 45%;
     border-radius: 1em;
     overflow: hidden;
     box-shadow: 0 5px 10px 0;
 }
 
-.imagen1{background: url("img/H1.jpg")no-repeat center center/cover; width: 100%; height: 100%;} 
-.imagen2{background: url("img/H2.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
-.imagen3{background: url("img/H3.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
-.imagen4{background: url("img/Ej4.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
+.imagen1{background: url("img/H1.jpg")no-repeat center center/cover; width:100%; height:100%;} 
+.imagen2{background: url("img/H2.jpg")no-repeat center center/cover; width:100%; height:100%;}
+.imagen3{background: url("img/H3.jpg")no-repeat center center/cover; width:100%; height:100%;}
+.imagen4{background: url("img/Ej4.jpg")no-repeat center center/cover; width:100%; height:100%;}
 
 .barra-proy div section div  a{ text-decoration: none;}
 .barra-proy div section div  a:hover .nombrep{text-decoration: underline;}
 
 .imagenp {
     display: flex;
-    width: 48%;
+    width: 40%;
     float: right;
-    height: 280px;
+    height: 100%;
 }
 
 .imagenp img{
-    margin-top: 25px;
+    margin-top: 10%;
     margin-left: 45px;
+    margin-bottom: 20%;
     width: 300px;
-    height: 200px;
+    height: 44%;
     border-radius: 1em;
 }
 
@@ -153,14 +158,15 @@ nav ul li a .tercero{background: #519795;}
     width: 50%;
     font-size: 35px;
     color: white;
+    height: 15%;
 }
 
-.descripcionp{
+.descripcionp{ 
     position: relative;
-    width: 45%;
+    width: 50%;
     font-size: 18px;
-    height: auto;
-    margin: 2em 3.5em;
+    height: 40%;
+    margin: 2.5% 4.5%;
     text-align: justify;
     color: white;
 
@@ -203,10 +209,10 @@ nav ul li a .tercero{background: #519795;}
 /*Etiquetas de noticias, eventos, etc*/
 .etiquetas{
     position: absolute;
-    margin: 20.4em 6.4em;
+    margin: 22% 5%;
     width: 80%;
     border-radius: 1em;
-    height: 225px;
+    height: 35%;
 }
 
 .etiquetas{
@@ -214,7 +220,6 @@ nav ul li a .tercero{background: #519795;}
 }
 .E1{
     width:30%;
-    padding-left: 20px;
     height: 100%;
     float: left;
     border-radius: 1em;
@@ -224,7 +229,6 @@ nav ul li a .tercero{background: #519795;}
 .E2{
     margin: 0 5.1em;
     width:30%;
-    padding-left: 20px;
     height: 100%;
     border-radius: 1em;
     background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
@@ -233,7 +237,6 @@ nav ul li a .tercero{background: #519795;}
 .E3{
     
     width:30%;
-    padding-left: 20px;
     height: 100%;
     float: right;
     border-radius: 1em;
