--- a/Estilos.css
+++ b/Estilos.css
@@ -16,11 +16,10 @@ header{
     width: 84%;
     height: 55px;
     margin: auto;
-    padding-bottom: 3%;
 
 }
 
-.ancho{ 
+.ancho{
     width: 100%;
     height: 55px;
     margin: auto;
@@ -106,48 +105,44 @@ nav ul li a .tercero{background: #519795;}
 /*Contenido barra navegacion proyectos y etiquetas*/
 
 .contenido{
-    
-    width: 90%;
-    height: 50%;
-    margin: .5% auto;
+    width: 96%;
+    height: 525px;
+    margin: 0.5em auto;
     border-radius: 1em;
-    margin-bottom: 1em;
-    padding-top: 3%;
-    padding-bottom: 40%;
+    margin-bottom: 3.5em;
 }
 
 /*Menu desplazable de proyectos*/
 .barra-proy{
     position: absolute;
-    width: 86%;
-    margin: -2% 2.2%;
-    height: 45%;
+    width: 80%;
+    margin: 1em 6.4em;
+    height: 280px;
     border-radius: 1em;
     overflow: hidden;
     box-shadow: 0 5px 10px 0;
 }
 
-.imagen1{background: url("img/H1.jpg")no-repeat center center/cover; width:100%; height:100%;} 
-.imagen2{background: url("img/H2.jpg")no-repeat center center/cover; width:100%; height:100%;}
-.imagen3{background: url("img/H3.jpg")no-repeat center center/cover; width:100%; height:100%;}
-.imagen4{background: url("img/Ej4.jpg")no-repeat center center/cover; width:100%; height:100%;}
+.imagen1{background: url("img/H1.jpg")no-repeat center center/cover; width: 100%; height: 100%;} 
+.imagen2{background: url("img/H2.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
+.imagen3{background: url("img/H3.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
+.imagen4{background: url("img/Ej4.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
 
 .barra-proy div section div  a{ text-decoration: none;}
 .barra-proy div section div  a:hover .nombrep{text-decoration: underline;}
 
 .imagenp {
     display: flex;
-    width: 40%;
+    width: 48%;
     float: right;
-    height: 100%;
+    height: 280px;
 }
 
 .imagenp img{
-    margin-top: 10%;
+    margin-top: 25px;
     margin-left: 45px;
-    margin-bottom: 20%;
     width: 300px;
-    height: 44%;
+    height: 200px;
     border-radius: 1em;
 }
 
@@ -158,15 +153,14 @@ nav ul li a .tercero{background: #519795;}
     width: 50%;
     font-size: 35px;
     color: white;
-    height: 15%;
 }
 
-.descripcionp{ 
+.descripcionp{
     position: relative;
-    width: 50%;
+    width: 45%;
     font-size: 18px;
-    height: 40%;
-    margin: 2.5% 4.5%;
+    height: auto;
+    margin: 2em 3.5em;
     text-align: justify;
     color: white;
 
@@ -209,10 +203,10 @@ nav ul li a .tercero{background: #519795;}
 /*Etiquetas de noticias, eventos, etc*/
 .etiquetas{
     position: absolute;
-    margin: 22% 5%;
+    margin: 20.4em 6.4em;
     width: 80%;
     border-radius: 1em;
-    height: 35%;
+    height: 225px;
 }
 
 .etiquetas{
@@ -220,6 +214,7 @@ nav ul li a .tercero{background: #519795;}
 }
 .E1{
     width:30%;
+    padding-left: 20px;
     height: 100%;
     float: left;
     border-radius: 1em;
@@ -229,6 +224,7 @@ nav ul li a .tercero{background: #519795;}
 .E2{
     margin: 0 5.1em;
     width:30%;
+    padding-left: 20px;
     height: 100%;
     border-radius: 1em;
     background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
@@ -237,6 +233,7 @@ nav ul li a .tercero{background: #519795;}
 .E3{
     
     width:30%;
+    padding-left: 20px;
     height: 100%;
     float: right;
     border-radius: 1em;
