--- a/Estilos.css
+++ b/Estilos.css
@@ -13,13 +13,14 @@ body{
 /*Contenedor cabecera*/
 header{
     background: black;
-    width: 84%;
+    width: 86%;
     height: 55px;
     margin: auto;
+    padding-bottom: 3%;
 
 }
 
-.ancho{
+.ancho{ 
     width: 100%;
     height: 55px;
     margin: auto;
@@ -53,7 +54,6 @@ nav{
     color: white;
 }
 
-
 nav ul li{
     
     float: right;
@@ -71,7 +71,6 @@ nav ul li a{
     color: white;
     
 }
-
 nav ul li a:hover{
     text-decoration: none;
     color: white;
@@ -110,44 +109,48 @@ nav ul li a .tercero{background: #519795;}
 /*Contenido barra navegacion proyectos y etiquetas*/
 
 .contenido{
-    width: 96%;
-    height: 525px;
-    margin: 0.5em auto;
+    
+    width: 90%;
+    height: 50%;
+    margin: .5% auto;
     border-radius: 1em;
-    margin-bottom: 3.5em;
+    margin-bottom: 1em;
+    padding-top: 3%;
+    padding-bottom: 40%;
 }
 
 /*Menu desplazable de proyectos*/
 .barra-proy{
     position: absolute;
-    width: 84%;
-    margin: 1em 6.4em;
-    height: 280px;
+    width: 86%;
+    margin: -2% 2.2%;
+    height: 45%;
     border-radius: 1em;
     overflow: hidden;
     box-shadow: 0 5px 10px 0;
 }
 
-.imagen1{background: url("img/H1.jpg")no-repeat center center/cover; width: 100%; height: 100%;} 
-.imagen2{background: url("img/H2.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
-.imagen3{background: url("img/H3.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
-.imagen4{background: url("img/Ej4.jpg")no-repeat center center/cover; width: 100%; height: 100%;}
+.imagen1{background: url("img/H1.jpg")no-repeat center center/cover; width:100%; height:100%;} 
+.imagen2{background: url("img/H2.jpg")no-repeat center center/cover; width:100%; height:100%;}
+.imagen3{background: url("img/H3.jpg")no-repeat center center/cover; width:100%; height:100%;}
+.imagen4{background: url("img/Ej4.jpg")no-repeat center center/cover; width:100%; height:100%;}
 
 .barra-proy div section div  a{ text-decoration: none;}
 .barra-proy div section div  a:hover .nombrep{text-decoration: underline;}
 
 .imagenp {
     display: flex;
-    width: 48%;
+    width: 40%;
     float: right;
-    height: 280px;
+    height: 100%;
 }
 
 .imagenp img{
-    margin-top: 25px;
+    margin-top: 10%;
     margin-left: 45px;
+    margin-bottom: 20%;
     width: 300px;
-    height: 200px;
+    height: 44%;
     border-radius: 1em;
 }
 
@@ -158,14 +161,15 @@ nav ul li a .tercero{background: #519795;}
     width: 50%;
     font-size: 35px;
     color: white;
+    height: 15%;
 }
 
-.descripcionp{
+.descripcionp{ 
     position: relative;
-    width: 45%;
+    width: 50%;
     font-size: 18px;
-    height: auto;
-    margin: 2em 3.5em;
+    height: 40%;
+    margin: 2.5% 4.5%;
     text-align: justify;
     color: white;
 
@@ -208,10 +212,10 @@ nav ul li a .tercero{background: #519795;}
 /*Etiquetas de noticias, eventos, etc*/
 .etiquetas{
     position: absolute;
-    margin: 20.4em 6.4em;
-    width: 84%;
+    margin: 22% 5%;
+    width: 80%;
     border-radius: 1em;
-    height: 225px;
+    height: 35%;
 }
 
 .etiquetas{
@@ -219,7 +223,6 @@ nav ul li a .tercero{background: #519795;}
 }
 .E1{
     width:30%;
-    padding-left: 20px;
     height: 100%;
     float: left;
     border-radius: 1em;
@@ -229,7 +232,6 @@ nav ul li a .tercero{background: #519795;}
 .E2{
     margin: 0 5.1em;
     width:30%;
-    padding-left: 20px;
     height: 100%;
     border-radius: 1em;
     background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
@@ -238,12 +240,12 @@ nav ul li a .tercero{background: #519795;}
 .E3{
     
     width:30%;
-    padding-left: 20px;
     height: 100%;
     float: right;
     border-radius: 1em;
     background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
 }
+
 
 /*Pie de pagina */
 .redes ul li{
