--- a/Estilos2.css
+++ b/Estilos2.css
@@ -7,7 +7,43 @@ body{
 }
 
 .formulario{
-    background: rgba(0, 0, 0,.5);
+    background: rgba(0, 0, 0, .3);
     padding: 20px;
+    border-radius: 1em;
+    box-shadow: 0 5px 10px 0;
 
+}
+
+.form-control{
+    border-style: none;
+    transition: 0.5s ease-in;
+}
+
+.ingresar{
+    background: #CD6374;
+    font-size: 18px;
+    font-weight: 500!important;
+    color: white;
+    
+}
+
+.ingresar:hover{
+    transition: 0.5s ease-in;
+}
+
+.registrar{
+    margin: 10px;
+    background: #519795;
+    font-size: 18px;
+    font-weight: 500!important;
+    color: white;
+    transition: 0.5s ease-out;
+}
+
+hr{
+    background-color: #ffff;
+}
+
+.olvide{
+     color: white;
 }
