--- a/Estilos.css
+++ b/Estilos.css
@@ -248,6 +248,13 @@ nav ul li a .tercero{background: #519795;}
 
 
 /*Pie de pagina */
+.ola{
+    background-color: #519795;
+}
+#hola{
+    color: #519795;
+}
+
 .redes ul li{
 	list-style: none;
 	margin: 0 15px;
@@ -267,7 +274,7 @@ nav ul li a .tercero{background: #519795;}
 	font-size: 30px;
 	line-height: 60px	;
 	transition: .6s;
-	color: #CD6374;
+	color: #4b8b89;
 }
 .redes ul li .fa:hover{
 	color: #ffffff;
