--- a/Estilos2.css
+++ b/Estilos2.css
@@ -1,4 +1,3 @@
-
 body{
     background-image: url("img/F.jpg");
     background-repeat: no-repeat;
@@ -6,19 +5,30 @@ body{
     background-attachment: fixed;
 }
 
+/*Estilos para input de texto y contraseña/ no me sirvieron):*/
+.containter input[type="text"],
+.containter input[type="password"]{
+    border: none;
+    border-bottom: 1px solid #ffff;
+    background: transparent;  
+}
+
+/*Caja del formulario*/
 .formulario{
+    position: relative;
     background: rgba(0, 0, 0, .3);
     padding: 20px;
     border-radius: 1em;
     box-shadow: 0 5px 10px 0;
-
+    height: auto;
 }
 
+/*Transicion del input*/
 .form-control{
     border-style: none;
     transition: 0.5s ease-in;
 }
-
+/*boton ingresar*/
 .ingresar{
     background: #CD6374;
     font-size: 18px;
@@ -30,7 +40,7 @@ body{
 .ingresar:hover{
     transition: 0.5s ease-in;
 }
-
+/*Boton registrar*/
 .registrar{
     margin: 10px;
     background: #519795;
@@ -47,3 +57,18 @@ hr{
 .olvide{
      color: white;
 }
+/*Para que se elimine el formulario de registro*/
+.container div .registroo form{
+    display: none;
+}
+
+
+/*Iniciar sesion-privilegiado*/
+.inicio-sesion{
+    opacity: 1;
+    display: block;
+}
+/*Ajuste para dispositivos menores*/
+
+
+
