--- a/Estilos3.css
+++ b/Estilos3.css
@@ -61,11 +61,8 @@ hr{
 
 
 /*Iniciar sesion-privilegiado*/
-.inicio-sesion{
+.registroo{
     opacity: 1;
     display: block;
 }
 /*Ajuste para dispositivos menores*/
-
-
-
