--- a/Estilos2.css
+++ b/Estilos2.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("img/F.jpg");
+    background-image: url("img/FF2.jpg");
     background-repeat: no-repeat;
     background-size: cover;   
     background-attachment: fixed;
@@ -38,18 +38,22 @@ body{
 }
 
 .ingresar:hover{
+    color: black;
     transition: 0.5s ease-in;
 }
 /*Boton registrar*/
 .registrar{
-    width: 100px;
-    height: 20px;
-    margin: 10px;
+    padding: 50px;
+    margin: 10px auto;
     background: #519795;
     font-size: 18px;
     font-weight: 500!important;
     color: white;
-    transition: 0.5s ease-out;
+}
+
+.registrar:hover{
+    color: black;
+    transition: 0.5s ease-in;
 }
 
 hr{
