--- a/Unetee.css
+++ b/Unetee.css
@@ -138,3 +138,140 @@ header label{
     box-shadow: 0 0 10px 0;
     border-radius: 10px;
 }
+
+.formulario{
+    background: #FFE389;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0;
+}
+
+.formulario div h1{
+    font-size: 40px;
+    font-weight: bolder; 
+}
+
+.formulario div hr{
+    background: black;
+    height: 3px;
+}
+
+.uch{
+    margin-left: 15%;
+}
+
+.uch label{
+    font-family: 'Sansita Swashed', cursive;
+}
+
+/*Pie de pagina */
+.content{
+    
+    width: 60%;
+    margin: 0 auto;
+   
+}
+
+.ola{
+    background-color: #519795;
+}
+#hola{
+    color: #519795;
+}
+
+.redes ul li{
+	list-style: none;
+	margin: 0 15px;
+}
+.redes ul{
+	position: absolute;
+	top:50%;
+	left:50%;
+	padding:0;
+	margin: 0;
+	transform: translate(-50%,-50%);
+	display: flex;
+	overflow: hidden;
+
+}
+.redes ul li .fa{
+	font-size: 30px;
+	line-height: 60px	;
+	transition: .6s;
+	color: #4b8b89;
+}
+.redes ul li .fa:hover{
+	color: #ffffff;
+}
+.redes ul li a{
+	position: relative;
+	display: block;
+	height: 60px;
+	width: 60px;
+	border-radius: 50px;
+	background: #ffffff;
+	text-align: center;
+	transition: .6s;
+	box-shadow: 0px 8px 10px rgba(107, 106, 106, 0.5);
+}
+.redes ul li a:hover{
+	transform: translate(0px,5px);
+}
+
+.redes ul li:nth-child(1) a:hover{
+	background-color: #3b5999;
+}
+.redes ul li:nth-child(2) a:hover{
+	background-color: #55acee;
+}
+.redes ul li:nth-child(3) a:hover{
+	background-color: #e4405f;
+}
+.redes ul li:nth-child(4) a:hover{
+	background-color: #cd201f;
+}
+
+
+@media (min-width: 1024px){
+    .menu{
+        position: static;
+        width: auto;
+        height: auto;
+        transform: translateX(0%);
+        float: right;
+        display: flex;
+    }
+    
+    .menu a {
+        border: none; 
+    }
+    .menu div a {
+        visibility: hidden;
+    }
+    header label{
+        display: none;
+    }
+
+
+}
+
+@media (max-width: 1023px){
+
+    
+    nav a span{
+        visibility: hidden;
+        display: none;
+    }
+    nav a span .icon{
+       visibility: hidden;
+       display: none;
+    }
+    
+    nav a:hover span{
+        transform: translateX(0%);
+    }
+
+    .uch{
+        margin-left: 0;
+    }
+
+}
