--- a/EjemploO.css
+++ b/EjemploO.css
@@ -7,7 +7,8 @@
 body{
     font-family: 'Josefin Sans', sans-serif;
 }
-.gg{
+.gg a{
+    text-decoration: none;
     font-family: 'Sansita Swashed', cursive;
     font-size: 18px;
     margin-left: 20px;
