--- a/Estilos1.css
+++ b/Estilos1.css
@@ -7,7 +7,8 @@
 body{
     font-family: 'Josefin Sans', sans-serif;
 }
-.gg{
+.gg a{
+    text-decoration: none;
     font-family: 'Sansita Swashed', cursive;
     font-size: 18px;
     margin-left: 20px;
@@ -153,21 +154,21 @@ section{
 }
 
 .enlace a img{
-    width: 300px;
+    width: 235px;
     height: 200px;
     border-radius: 5px;
 }
 
 .enlace a{
     text-decoration: none;
-    color: black;
+    color: white;
     font-family: 'Sansita Swashed', cursive;
     font-size: 20px;
 }
 
 .enlace a:hover{
     text-decoration: underline;
-    color: white;
+    color: #CD6374;
     transition: 0.5s ease-in;
     
 }
