--- a/Unetee.css
+++ b/Unetee.css
@@ -7,7 +7,8 @@
 body{
     font-family: 'Josefin Sans', sans-serif;
 }
-.gg{
+.gg a{
+    text-decoration: none;
     font-family: 'Sansita Swashed', cursive;
     font-size: 18px;
     margin-left: 20px;
@@ -333,6 +334,8 @@ main{
        visibility: hidden;
        display: none;
     }
+
+    
     
     nav a:hover span{
         transform: translateX(0%);
