--- a/Unetee.css
+++ b/Unetee.css
@@ -189,11 +189,13 @@ main{
     color: white;
     outline: none;
     transition: all 300ms;
+    transition: .6s;
 }
 
 .caja-trasera button:hover{
     color:black;
     background: #519795;
+    transform: translate(0px,-5px);
 }
 
 /*Formulario y nota*/
@@ -252,8 +254,12 @@ main{
     color: white;
     cursor: pointer;
     outline: none;
+    transition: .6s;
 }
 
+.contenedor-nota-registro form button:hover{
+    transform: translate(0px,-5px);
+}
 .formulario-registro{
     opacity: 1;
     display: block;
