--- a/EjemploO.css
+++ b/EjemploO.css
@@ -132,12 +132,31 @@ header label{
     transform: translateX(0%);
 }
 /*Fin icono menu*/
+.cdre{
+   
+    opacity: 0.8;
+    background-image:  linear-gradient(#606a6a 1.5px, transparent 1.5px), linear-gradient(to right, #606a6a 1.5px, #9dc8dd 1.5px);
+    background-size: 58px 58px;
+}
+.foundr{
+    margin-top: 20px;
+    padding: 0;
+    background-color: rgba(0, 0, 0, 0);
+    border-style: none;
 
+}
 /*Contenido*/
+.fot{
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+}
+.ilad{
+    box-shadow: 0px 3px 0px 7px rgba(0, 0, 0, 0.2);
 
-
+}
 .nombre-p{
     font-family: 'Sansita Swashed', cursive;
+    background-color:  rgb(40, 100, 134);
+    color: #ffffff;
 }
 
 .proyecto article p{
@@ -145,18 +164,20 @@ header label{
 }
 
 .imagen img{
-    margin-left: 8px;
     width:250px;
-    border-radius: 1em;
-    box-shadow: 0 0 10px 0;
+    border-style: none;
+  
 }
 
 
 .pk{
     margin-top: 0;
-    background: black;
-    border-radius: 3px;
+    background: rgb(40, 100, 134);
     color: white;
+    margin-bottom: 0;
+}
+.lisae{
+    
 }
 section article ul li{
     margin-left: 15px;
@@ -173,9 +194,10 @@ section article ul li p{
 
 .conocelos{
     margin-top: 0;
-
-    background: black;
-    border-radius: 3px;
+    background: rgb(40, 100, 134);
+    margin-bottom: 0;
+    
+   
     
     color: white;
 }
